--- a/index.html
+++ b/index.html
@@ -163,6 +163,134 @@
             width: 100%;
         }
 
+        .mobile-menu-toggle {
+            display: none;
+            background: transparent;
+            border: 1px solid var(--border-gray);
+            color: var(--white);
+            width: 44px;
+            height: 44px;
+            border-radius: 0.5rem;
+            cursor: pointer;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 4px;
+            transition: all 0.3s;
+        }
+
+        .mobile-menu-toggle span {
+            display: block;
+            width: 20px;
+            height: 2px;
+            background: var(--white);
+            transition: all 0.3s;
+        }
+
+        .mobile-menu-toggle:hover,
+        .mobile-menu-toggle:focus {
+            background: var(--medium-gray);
+            border-color: var(--white);
+        }
+
+        .mobile-menu-toggle.active span:nth-child(1) {
+            transform: rotate(45deg) translate(5px, 5px);
+        }
+
+        .mobile-menu-toggle.active span:nth-child(2) {
+            opacity: 0;
+        }
+
+        .mobile-menu-toggle.active span:nth-child(3) {
+            transform: rotate(-45deg) translate(5px, -5px);
+        }
+
+        .mobile-nav-menu {
+            display: none;
+            position: fixed;
+            top: 80px;
+            left: 0;
+            right: 0;
+            background: rgba(10, 10, 10, 0.98);
+            backdrop-filter: blur(20px);
+            border-bottom: 1px solid var(--border-gray);
+            padding: 1rem;
+            z-index: 999;
+            animation: slideDown 0.3s;
+        }
+
+        @keyframes slideDown {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .mobile-nav-menu.show {
+            display: block;
+        }
+
+        .mobile-nav-menu ul {
+            list-style: none;
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
+        }
+
+        .mobile-nav-menu a {
+            display: block;
+            color: var(--text-gray);
+            text-decoration: none;
+            font-weight: 600;
+            padding: 1rem;
+            border-radius: 0.5rem;
+            transition: all 0.3s;
+            text-transform: uppercase;
+            font-size: 0.95rem;
+            letter-spacing: 0.03125rem;
+        }
+
+        .mobile-nav-menu a:hover,
+        .mobile-nav-menu a:focus {
+            background: var(--medium-gray);
+            color: var(--white);
+        }
+
+        .scroll-to-top {
+            position: fixed;
+            bottom: 2rem;
+            right: 2rem;
+            width: 50px;
+            height: 50px;
+            background: var(--white);
+            color: var(--black);
+            border: none;
+            border-radius: 50%;
+            cursor: pointer;
+            display: none;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.5rem;
+            font-weight: bold;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+            z-index: 1000;
+            transition: all 0.3s;
+        }
+
+        .scroll-to-top:hover,
+        .scroll-to-top:focus {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 20px rgba(255,255,255,0.2);
+        }
+
+        .scroll-to-top.show {
+            display: flex;
+        }
+
         .nav-actions {
             display: flex;
             gap: 1rem;
