--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <title>Food Lovers - Premium Kebab Marseille</title>
 
     <!-- EmailJS SDK -->
@@ -38,6 +38,12 @@
 
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
 
+        html {
+            font-size: 16px;
+            -webkit-text-size-adjust: 100%;
+            -ms-text-size-adjust: 100%;
+        }
+
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
             background: var(--black);
@@ -45,6 +51,19 @@
             overflow-x: hidden;
             line-height: 1.6;
             font-size: 1rem;
+            width: 100%;
+            max-width: 100vw;
+            position: relative;
+        }
+
+        img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+        }
+
+        button, input, textarea, select {
+            font-family: inherit;
         }
 
         .skip-link {
@@ -95,9 +114,11 @@
             backdrop-filter: blur(20px);
             position: fixed;
             width: 100%;
+            max-width: 100vw;
             top: 0;
             z-index: 1000;
             border-bottom: 1px solid var(--border-gray);
+            overflow-x: hidden;
         }
 
         nav {
@@ -107,6 +128,7 @@
             justify-content: space-between;
             align-items: center;
             padding: 1rem 2rem;
+            width: 100%;
         }
 
         .logo {
@@ -116,6 +138,15 @@
             display: flex;
             align-items: center;
             gap: 0.5rem;
+            flex-shrink: 1;
+            min-width: 0;
+            overflow: hidden;
+        }
+
+        .logo span {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 
         .logo-image {
@@ -123,6 +154,7 @@
             width: auto;
             margin-right: 0.5rem;
             border-radius: 0.5rem;
+            flex-shrink: 0;
         }
 
         .nav-menu {
@@ -295,6 +327,7 @@
             display: flex;
             gap: 1rem;
             align-items: center;
+            flex-shrink: 0;
         }
 
         .social-icons {
@@ -500,6 +533,8 @@
         .container {
             max-width: 87.5rem;
             margin: 0 auto;
+            width: 100%;
+            padding: 0 1rem;
         }
 
         .section-header {
