--- a/index.html
+++ b/index.html
@@ -1181,6 +1181,10 @@
                 display: none;
             }
 
+            .logo span {
+                display: none;
+            }
+
             nav {
                 padding: 1rem 1rem;
             }
