--- a/index.html
+++ b/index.html
@@ -1181,20 +1181,32 @@
                 display: none;
             }
 
+            .logo {
+                font-size: 0.55rem;
+                gap: 0.25rem;
+            }
+
             .logo span {
-                display: none;
+                display: flex;
+                flex-direction: column;
+                gap: 0;
+                line-height: 1;
+                white-space: normal;
+            }
+
+            .logo-line1,
+            .logo-line2 {
+                display: block;
+                line-height: 1.1;
             }
 
             nav {
-                padding: 1rem 1rem;
-            }
-
-            .logo {
-                font-size: 1.1rem;
+                padding: 0.75rem 1rem;
             }
 
             .logo-image {
-                height: 48px;
+                height: 45px;
+                margin-right: 0.3rem;
             }
 
             .cart-btn {
@@ -1398,7 +1410,11 @@
 
         @media (max-width: 25rem) {
             .logo {
-                font-size: 1.2rem;
+                font-size: 0.5rem;
+            }
+
+            .logo-image {
+                height: 40px;
             }
 
             .hero-container h1 {
@@ -1448,7 +1464,10 @@
         <nav role="navigation" aria-label="Hauptnavigation">
             <div class="logo">
                 <img src="logo.png" alt="Professional Food Lovers Restaurant Logo" class="logo-image">
-                <span>PROFESSIONAL FOOD LOVERS</span>
+                <span>
+                    <span class="logo-line1">PROFESSIONAL</span>
+                    <span class="logo-line2">FOOD LOVERS</span>
+                </span>
             </div>
 
             <ul class="nav-menu">
